other-vpol/block-images-with-volumes/.kyverno-test/context.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Context
metadata:
  name: context
spec:
  images:
  - image: clover/volume:passbolt
    config:
      config:
        Volumes:
          /data: {}
  - image: ghcr.io/kyverno/test-busybox:1.35
    config:
      config:
        Volumes: {}
  - image: ghcr.io/kyverno/test-busybox:1.28
    config:
      config: {}
  - image: busybox:1.35
    config:
      config:
        Volumes: {}
